# Protein2Text

./: .gitignore  README.md  pyproject.toml
data/: sample_input.json
evaluation/: inference_model.py
evaluation/model/: __init__.py  builder.py  llava_arch.py
evaluation/model/gated_cross_attention/: GCA.py
evaluation/model/language_model/: llava_llama.py
evaluation/model/multimodal_encoder/: builder.py  esm_encoder.py
evaluation/model/multimodal_projector/: builder.py
results/: sample_input_results.jsonl
scripts/: inference_model.py
